# MP-Curs-24-25

./: .gitignore  README.md
projecte/codi_lliurament_final/0. C++ Code/Logic Game/: info_joc.hpp  joc.cpp  joc.hpp  main.cpp
projecte/codi_lliurament_final/2. Platforms/0. Windows Desktop/: MP_Practica.vcxproj.filters
projecte/codi_lliurament_final_linux/: CMakeLists.txt  README.md  run.sh
projecte/codi_lliurament_final_linux/0. C++ Code/Graphic Lib/: image_png.cpp  keyboard.h  sound.cpp  sprites.h  stb_vorbis.cpp  video.cpp  video.h
projecte/codi_lliurament_final_linux/0. C++ Code/Logic Game/: GraphicManager.cpp  GraphicManager.h  info_joc.hpp  joc.cpp  joc.hpp  main.cpp
projecte/codi_lliurament_final_linux/1. Resources/data/Games/: moviments.txt
projecte/codi_lliurament_final_linux/2. Platforms/0. Windows Desktop/: MP_Practica.vcxproj
projecte/test_primer_lliurament/source/: posicio.hpp  tauler.hpp
projecte/test_primer_lliurament/test/: tauler_inicial_1.txt  tauler_inicial_2.txt  tauler_moviment_fitxa_10.txt  tauler_moviment_fitxa_3.txt  tauler_moviment_fitxa_4.txt  tauler_moviment_fitxa_5.txt  tauler_moviment_fitxa_6.txt  tauler_moviment_fitxa_7.txt  tauler_moviment_fitxa_8.txt  tauler_moviment_fitxa_9.txt  tauler_moviment_fitxa_resultat_10.txt  tauler_moviment_fitxa_resultat_2.txt  tauler_moviment_fitxa_resultat_3.txt  tauler_moviment_fitxa_resultat_5.txt  tauler_moviment_fitxa_resultat_6.txt  tauler_moviment_fitxa_resultat_7.txt  tauler_moviment_fitxa_resultat_8.txt  tauler_moviment_fitxa_resultat_9.txt  tauler_moviments_valids.txt  test.cpp
tema_0/codi_sessions_classe/sessio_2/activitat_sessio/: main.cpp  unio_vectors.cpp  unio_vectors.h
tema_0/codi_sessions_classe/sessio_3/activitat_sessio_struct/: Poligon.cpp  (+1 more)
tema_2/codi_sessions_classe/sessio_13/: Estudiant.vcxproj  Estudiant.vcxproj.filters  professors.txt
(+261 files in other folders)
